Making it public

--- a/public/blog/thoughts/fragments/index.html
+++ b/public/blog/thoughts/fragments/index.html
@@ -24,11 +24,11 @@
 <meta property="og:title" content="Fragments" />
 <meta property="og:description" content="Fragments of my life which include gratitudes given to people and lessons learned, core ideas,  and undeveloped thoughts. These fragments loosely follow the model of discourse followed by Marcus Aurelius in his Meditations. They are fully my own work. The fragments are not intended to be complete discussions of an idea and will not include references." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="/blog/thoughts/fragments/" /><meta property="og:image" content="https://twitter.com/gfdalton/photo"/><meta property="og:site_name" content="Werk Space" />
+<meta property="og:url" content="/blog/thoughts/fragments/" /><meta property="og:image" content="/logo_white_words.png"/><meta property="og:site_name" content="Werk Space" />
 
 <meta itemprop="name" content="Fragments">
 <meta itemprop="description" content="Fragments of my life which include gratitudes given to people and lessons learned, core ideas,  and undeveloped thoughts. These fragments loosely follow the model of discourse followed by Marcus Aurelius in his Meditations. They are fully my own work. The fragments are not intended to be complete discussions of an idea and will not include references."><meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://twitter.com/gfdalton/photo"/>
+<meta name="twitter:image" content="/logo_white_words.png"/>
 
 <meta name="twitter:title" content="Fragments"/>
 <meta name="twitter:description" content="Fragments of my life which include gratitudes given to people and lessons learned, core ideas,  and undeveloped thoughts. These fragments loosely follow the model of discourse followed by Marcus Aurelius in his Meditations. They are fully my own work. The fragments are not intended to be complete discussions of an idea and will not include references."/>
@@ -43,17 +43,6 @@
   src="https://code.jquery.com/jquery-3.6.0.min.js"
   integrity="sha384-vtXRMe3mGCbOeY7l30aIg8H9p3GdeSe4IFlP6G8JMa7o7lXvnz3GFKzPxzJdPfGK"
   crossorigin="anonymous"></script>
-
-<script type="application/javascript">
-var doNotTrack = false;
-if (!doNotTrack) {
-	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-	ga('create', 'UA-00000000-0', 'auto');
-	
-	ga('send', 'pageview');
-}
-</script>
-<script async src='https://www.google-analytics.com/analytics.js'></script>
 
   </head>
   <body class="td-section td-blog">
@@ -174,8 +163,15 @@ if (!doNotTrack) {
   </ul>
 </li><li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child" id="m-blog20200501privacy-secrecy-and-data-li">
   <a href="/blog/2020/05/01/privacy-secrecy-and-data/" class="align-left pl-0 td-sidebar-link td-sidebar-link__page" id="m-blog20200501privacy-secrecy-and-data"><span class="">Privacy, Secrecy, and Data</span></a>
-</li><li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child" id="m-blog20200427my-philosophy-li">
-  <a href="/blog/2020/04/27/my-philosophy/" class="align-left pl-0 td-sidebar-link td-sidebar-link__page" id="m-blog20200427my-philosophy"><span class="">My Philosophy</span></a>
+</li><li class="td-sidebar-nav__section-title td-sidebar-nav__section with-child" id="m-blogthoughtsphilosophy-li">
+  <a href="/blog/thoughts/philosophy/" class="align-left pl-0 td-sidebar-link td-sidebar-link__section" id="m-blogthoughtsphilosophy"><span class="">My Philosophy</span></a>
+  <ul class="ul-3 foldable">
+    <li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child" id="m-blog20220808not-a-slave-to-superstition-li">
+  <a href="/blog/2022/08/08/not-a-slave-to-superstition/" title="Not a Slave to Superstition" class="align-left pl-0 td-sidebar-link td-sidebar-link__page" id="m-blog20220808not-a-slave-to-superstition"><span class="">Superstition</span></a>
+</li><li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child" id="m-blog20200427basic-philosophy-li">
+  <a href="/blog/2020/04/27/basic-philosophy/" title="Basic Philosophy" class="align-left pl-0 td-sidebar-link td-sidebar-link__page" id="m-blog20200427basic-philosophy"><span class="">Basics</span></a>
+</li>
+  </ul>
 </li>
   </ul>
 </li><li class="td-sidebar-nav__section-title td-sidebar-nav__section with-child" id="m-blogreviews-li">
@@ -253,141 +249,239 @@ if (!doNotTrack) {
 
 
 
-
-
-
 <div class="row">
 	<div class="col-12">
-		
-		<h2>Posts in 2022</h2>
-		<ul class="list-unstyled mt-4">
 			
-			<li class="media mb-4">
-				<div class="media-body">
-					<h5 class="mt-0 mb-1"><a href="/blog/2022/05/31/truth-03/">Truth 03</a></h5>
-					<div class="lead">Is there an ultimate Truth? Does it matter?</div>
-					<p class="mb-2 mb-md-3"><small class="text-muted">Tuesday, May 31, 2022 in Fragments</small></p>
-					
+			<h2>Posts in 2022</h2>
+			<ul class="list-unstyled mt-4">
+				
+				<li class="media mb-4">
+					<div class="media-body">
+						<h5 class="mt-0 mb-1"><a href="/blog/2022/05/31/truth-03/">Truth 03</a></h5>
+						<p class="mb-2 mb-md-3"><small class="text-muted">Tuesday, May 31, 2022 in Fragments</small></p>
+						<header class="article-meta">
+							
+
+  
+    
+
+
+  
+    
+
+
+  
+
+							
+						</header>
+						
 
 
 
 
 
-					<p class="pt-0 mt-0">Most would argue that what&rsquo;s true is true. That there does indeed exist an ultimate or quintessential underlying reality. But is this a valid understanding?
+						<p class="pt-0 mt-0">Most would argue that what&rsquo;s true is true. That there does indeed exist an ultimate or quintessential underlying reality. But is this a valid understanding?
 In my studies of mathematics, especially probability and statistics, we assume that …</p>
-					<p class="pt-0"><a href="/blog/2022/05/31/truth-03/">Read more</a></p>
-				</div>
-			</li>
+						<p class="pt-0"><a href="/blog/2022/05/31/truth-03/" aria-label="Read more - Truth 03">Read more</a></p>
+					</div>
+				</li>
+				
+			</ul>
 			
-		</ul>
-		
-		<h2>Posts in 2020</h2>
-		<ul class="list-unstyled mt-4">
-			
-			<li class="media mb-4">
-				<div class="media-body">
-					<h5 class="mt-0 mb-1"><a href="/blog/2020/06/28/habits-01/">Habits 01</a></h5>
-					<div class="lead">Importance of good habits</div>
-					<p class="mb-2 mb-md-3"><small class="text-muted">Sunday, June 28, 2020 in Fragments</small></p>
-					
+			<h2>Posts in 2020</h2>
+			<ul class="list-unstyled mt-4">
+				
+				<li class="media mb-4">
+					<div class="media-body">
+						<h5 class="mt-0 mb-1"><a href="/blog/2020/06/28/habits-01/">Habits 01</a></h5>
+						<p class="mb-2 mb-md-3"><small class="text-muted">Sunday, June 28, 2020 in Fragments</small></p>
+						<header class="article-meta">
+							
+
+  
+    
+
+
+  
+    
+
+
+  
+
+							
+						</header>
+						
 
 
 
 
 
-					<p class="pt-0 mt-0">It is important to practice good habits of the mind at all times. Why? When we are not actively practicing good habits, we may lazily fall into bad habits. Bad habits are formed of the aggregate of our lives mixed with the cement of our passions, …</p>
-					<p class="pt-0"><a href="/blog/2020/06/28/habits-01/">Read more</a></p>
-				</div>
-			</li>
-			
-			<li class="media mb-4">
-				<div class="media-body">
-					<h5 class="mt-0 mb-1"><a href="/blog/2020/06/26/grandmother-porth/">Lucile Porth</a></h5>
-					
-					<p class="mb-2 mb-md-3"><small class="text-muted">Friday, June 26, 2020 in Fragments</small></p>
-					
+						<p class="pt-0 mt-0">It is important to practice good habits of the mind at all times. Why? When we are not actively practicing good habits, we may lazily fall into bad habits. Bad habits are formed of the aggregate of our lives mixed with the cement of our passions, …</p>
+						<p class="pt-0"><a href="/blog/2020/06/28/habits-01/" aria-label="Read more - Habits 01">Read more</a></p>
+					</div>
+				</li>
+				
+				<li class="media mb-4">
+					<div class="media-body">
+						<h5 class="mt-0 mb-1"><a href="/blog/2020/06/26/grandmother-porth/">Grandmother Porth</a></h5>
+						<p class="mb-2 mb-md-3"><small class="text-muted">Friday, June 26, 2020 in Fragments</small></p>
+						<header class="article-meta">
+							
+
+  
+    
+
+
+  
+    
+
+
+  
+
+							
+						</header>
+						
 
 
 
 
 
-					<p class="pt-0 mt-0">Grandma Porth taught me cards and other games. While I don&rsquo;t really play many games now, the lessons of probability I learned from her teaching have remained. She was a world traveler who loved new experiences and cultures. Her dedication to …</p>
-					<p class="pt-0"><a href="/blog/2020/06/26/grandmother-porth/">Read more</a></p>
-				</div>
-			</li>
-			
-			<li class="media mb-4">
-				<div class="media-body">
-					<h5 class="mt-0 mb-1"><a href="/blog/2020/06/23/truth-02/">Truth 02</a></h5>
-					<div class="lead">Attempts to understand the importance and meaning of truth.</div>
-					<p class="mb-2 mb-md-3"><small class="text-muted">Tuesday, June 23, 2020 in Fragments</small></p>
-					
+						<p class="pt-0 mt-0">Grandma Porth taught me cards and other games. While I don&rsquo;t really play many games now, the lessons of probability I learned from her teaching have remained. She was a world traveler who loved new experiences and cultures. Her dedication to …</p>
+						<p class="pt-0"><a href="/blog/2020/06/26/grandmother-porth/" aria-label="Read more - Lucile Porth">Read more</a></p>
+					</div>
+				</li>
+				
+				<li class="media mb-4">
+					<div class="media-body">
+						<h5 class="mt-0 mb-1"><a href="/blog/2020/06/23/truth-02/">Truth 02</a></h5>
+						<p class="mb-2 mb-md-3"><small class="text-muted">Tuesday, June 23, 2020 in Fragments</small></p>
+						<header class="article-meta">
+							
+
+  
+    
+
+
+  
+    
+
+
+  
+
+							
+						</header>
+						
 
 
 
 
 
-					<p class="pt-0 mt-0">The Absolute Truth can never be known, even if such a thing were to exist.
+						<p class="pt-0 mt-0">The Absolute Truth can never be known, even if such a thing were to exist.
 </p>
-					<p class="pt-0"><a href="/blog/2020/06/23/truth-02/">Read more</a></p>
-				</div>
-			</li>
-			
-			<li class="media mb-4">
-				<div class="media-body">
-					<h5 class="mt-0 mb-1"><a href="/blog/2020/06/23/truth-01/">Truth 01</a></h5>
-					<div class="lead">Attempts to understand the importance and meaning of truth.</div>
-					<p class="mb-2 mb-md-3"><small class="text-muted">Tuesday, June 23, 2020 in Fragments</small></p>
-					
+						<p class="pt-0"><a href="/blog/2020/06/23/truth-02/" aria-label="Read more - Truth 02">Read more</a></p>
+					</div>
+				</li>
+				
+				<li class="media mb-4">
+					<div class="media-body">
+						<h5 class="mt-0 mb-1"><a href="/blog/2020/06/23/truth-01/">Truth 01</a></h5>
+						<p class="mb-2 mb-md-3"><small class="text-muted">Tuesday, June 23, 2020 in Fragments</small></p>
+						<header class="article-meta">
+							
+
+  
+    
+
+
+  
+    
+
+
+  
+
+							
+						</header>
+						
 
 
 
 
 
-					<p class="pt-0 mt-0">Truth is hard and I will likely give it many fragments. I consider the discernment of truth, one of the most difficult and important things to put the efforts of my mind toward. It is a goal of religions, sciences, and philosophies.
+						<p class="pt-0 mt-0">Truth is hard and I will likely give it many fragments. I consider the discernment of truth, one of the most difficult and important things to put the efforts of my mind toward. It is a goal of religions, sciences, and philosophies.
 </p>
-					<p class="pt-0"><a href="/blog/2020/06/23/truth-01/">Read more</a></p>
-				</div>
-			</li>
+						<p class="pt-0"><a href="/blog/2020/06/23/truth-01/" aria-label="Read more - Truth 01">Read more</a></p>
+					</div>
+				</li>
+				
+				<li class="media mb-4">
+					<div class="media-body">
+						<h5 class="mt-0 mb-1"><a href="/blog/2020/06/21/gary-dalton-jr/">Gary Dalton Jr</a></h5>
+						<p class="mb-2 mb-md-3"><small class="text-muted">Sunday, June 21, 2020 in Fragments</small></p>
+						<header class="article-meta">
+							
+
+  
+    
+
+
+  
+    
+
+
+  
+
+							
+						</header>
+						
+
+
+
+
+
+						<p class="pt-0 mt-0">My Dad, Gary Dalton Jr. He struggled to find his identity and eventually paid the price for that struggle. From him, I learned the value of being open to the thoughts, ideas, opinions, and identities of others. He acknowledged to me that I do not …</p>
+						<p class="pt-0"><a href="/blog/2020/06/21/gary-dalton-jr/" aria-label="Read more - Gary Dalton Jr">Read more</a></p>
+					</div>
+				</li>
+				
+				<li class="media mb-4">
+					<div class="media-body">
+						<h5 class="mt-0 mb-1"><a href="/blog/2020/06/19/grandfather-dalton/">Grandfather Dalton</a></h5>
+						<p class="mb-2 mb-md-3"><small class="text-muted">Friday, June 19, 2020 in Fragments</small></p>
+						<header class="article-meta">
+							
+
+  
+    
+
+
+  
+    
+
+
+  
+
+							
+						</header>
+						
+
+
+
+
+
+						<p class="pt-0 mt-0">Thank you to my Grandfather Dalton, the original Garold. I gained much from your enjoyment, thought, and discussion (not argument) given to politics and your great ability to care little for labels. I recall a discussion we had regarding some …</p>
+						<p class="pt-0"><a href="/blog/2020/06/19/grandfather-dalton/" aria-label="Read more - Grandfather Dalton">Read more</a></p>
+					</div>
+				</li>
+				
+			</ul>
 			
-			<li class="media mb-4">
-				<div class="media-body">
-					<h5 class="mt-0 mb-1"><a href="/blog/2020/06/21/gary-dalton-jr/">Gary Dalton Jr</a></h5>
-					
-					<p class="mb-2 mb-md-3"><small class="text-muted">Sunday, June 21, 2020 in Fragments</small></p>
-					
-
-
-
-
-
-					<p class="pt-0 mt-0">My Dad, Gary Dalton Jr. He struggled to find his identity and eventually paid the price for that struggle. From him, I learned the value of being open to the thoughts, ideas, opinions, and identities of others. He acknowledged to me that I do not …</p>
-					<p class="pt-0"><a href="/blog/2020/06/21/gary-dalton-jr/">Read more</a></p>
-				</div>
-			</li>
-			
-			<li class="media mb-4">
-				<div class="media-body">
-					<h5 class="mt-0 mb-1"><a href="/blog/2020/06/19/grandfather-dalton/">Grandfather Dalton</a></h5>
-					
-					<p class="mb-2 mb-md-3"><small class="text-muted">Friday, June 19, 2020 in Fragments</small></p>
-					
-
-
-
-
-
-					<p class="pt-0 mt-0">Thank you to my Grandfather Dalton, the original Garold. I gained much from your enjoyment, thought, and discussion (not argument) given to politics and your great ability to care little for labels. I recall a discussion we had regarding some …</p>
-					<p class="pt-0"><a href="/blog/2020/06/19/grandfather-dalton/">Read more</a></p>
-				</div>
-			</li>
-			
-		</ul>
 		
 	</div>
 </div>
 <div class="row pl-2 pt-2">
 	<div class="col">
+		
+			
 		
 	</div>
 </div>
