--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -7,6 +7,13 @@
 
 <div class="row">
 	<div class="col-12">
+		{{ if .Content }}
+			<div class="section-bio mb-4">
+				{{ .Content }}
+			</div>
+		{{ end }}
+
+
 		{{- if .Pages -}}
 		{{ $pag := .Paginate (( $.Scratch.Get "blog-pages").GroupByDate "2006")}}
 			{{ range $pag.PageGroups }}
